Fix Contrast Ratios (#87)

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -71,3 +71,7 @@ h1, h2, h3, h4, h5, h6 {
     :hover.btn{
         background-color: #43d6b5 !important;
         }
+
+.navbar-light .navbar-nav .nav-link{
+    color: #4d4d4d;
+}
